# BARE

./: .gitignore  CLAUDE.md  Cargo.toml  FORMAT.md  INPUT_FORMAT.md  OUTPUT_FORMAT.md  PRIOR_ART.md  README.md  baseline.py  fetch_modules.py  serialize.py
.github/workflows/: ci.yml  release.yml
adapters/: README.md
adapters/nmap/: README.md  nmap_to_bare.py
adapters/nmap/examples/: bare_output.json  nmap_sample.xml
adapters/nuclei/: README.md  nuclei_to_bare.py
adapters/nuclei/examples/: findings.json  nuclei_sample.jsonl
adapters/shodan/: README.md  shodan_to_bare.py
adapters/shodan/examples/: bare_output.json  findings.json  shodan_sample.jsonl
assets/: README.md
schemas/: input.schema.json  output.schema.json
src/: corpus.rs  input.rs  main.rs  output.rs
tools/: encode_baseline.py  parity_check.py
