[package]
name    = "bare"
version = "0.1.0"
edition = "2021"

[dependencies]
# Hugging Face Rust ML framework
candle-core         = { version = "0.8", features = [] }
candle-nn           = { version = "0.8" }
candle-transformers = { version = "0.8" }

# Tokenizer — this is already written in Rust under the hood
# so this dependency is more "binding" than "port"
tokenizers = { version = "0.19", default-features = false, features = ["onig"] }

# Utilities
anyhow     = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
sha2       = "0.10"
